implemented the borrow API:
